# ai_enterpise_knowledge_platform

./: .env  .env.example  .gitignore  LICENSE  README.md  docker-compose.yml  journal.md  main.py  pyproject.toml  requirements.txt  sample_policy.txt
alembic/: env.py
alembic/versions/: 23d735c99ba3_create_document_contents_table.py  4acb4e3924f4_create_document_chunks_table.py  d1f5841b149e_create_documents_table.py  d21c55889954_add_document_storage_fields.py
app/: main.py
app/api/v1/: __init__.py  documents.py
app/chunking/: base.py  fixed_size_chunker.py
app/core/: config.py  logging.py  middleware.py
app/db/: session.py
app/models/: __init__.py  document_chunk.py  document_content.py  documents.py
app/processors/: base.py  docx_processor.py  factory.py  pdf_processor.py  txt_processor.py
app/repositories/: document_chunk_repository.py  document_content_repository.py  document_repository.py
app/schemas/: document.py
app/services/: chunking_service.py  document_content_service.py  document_service.py  extraction_service.py
app/storage/: base.py  local_storage.py
tests/: test_document.py  test_health.py  test_upload.py
