[project]
name = "ai-knowledge-platform"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "fastapi>=0.138.0",
    "pydantic-settings>=2.14.2",
    "pymupdf>=1.28.0",
    "python-docx>=1.2.0",
    "python-dotenv>=1.2.2",
    "redis>=8.0.0",
    "sqlalchemy>=2.0.51",
    "structlog>=26.1.0",
    "uvicorn>=0.49.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "mypy>=2.1.0",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.18",
]


